--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
           </div>
         </div>
         <div class="page-1">
+          <base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">
+<div id="slider">
+<figure>
+<img src="austin-fireworks.jpg" alt>
+<img src="taj-mahal_copy.jpg" alt>
+<img src="ibiza.jpg" alt>
+<img src="ankor-wat.jpg" alt>
+<img src="austin-fireworks.jpg" alt>
+</figure>
+</div>
           </div>
       <div class="container-2">
   <!--
@@ -137,7 +147,7 @@ Codepen: https://codepen.io/supah/
 
 
 <a class="the-most" target="_blank" href="https://codepen.io/2016/popular/pens/4/">
-  <img src="https://raw.githubusercontent.com/supahfunk/supah-codepen/master/themost-2016.png">
+  <img class="slogan" src="https://raw.githubusercontent.com/supahfunk/supah-codepen/master/themost-2016.png">
 </a>
       </div>
       <div class="container-3">
