--- a/menu.html
+++ b/menu.html
@@ -25,159 +25,13 @@
       </div>
       <div class="navi-2"></div>
     </div>
-
-    <!-- <div class="container-all">
-      <div class="container-1">
-        <div class="title">Drinks</div>
-        <hr />
-      </div>
-      <div class="container-2">
-        <div class="title">Food</div>
-        <hr />
-      </div>
-      <div class="container-3">
-        <div class="title">At Home Coffee</div>
-        <hr />
-      </div>
-      <div class="container-4">
-        <div class="title">Merchandise</div>
-        <hr />
-      </div>
-      
-      <div class="footer">
-        <div class="footer-line">
-          <ul class="footer-apps">
-            <li><a  href="#"></a> <i class="fa-brands fa-facebook"></i></li>
-            <li><a href="#"></a> <i class="fa-brands fa-twitter"></i></li>
-            <li><a href="#"></a> <i class="fa-brands fa-instagram"></i></li>
-            <li><a href="#"></a> <i class="fa-brands fa-youtube"></i></li>
-            <li><a href="#"></a> <i class="fa-brands fa-github"></i></li>
-            <li><a href="#"></a> <i class="fa-brands fa-tiktok"></i></li>
-            <li><a href="#"></a> <i class="fa-brands fa-discord"></i></li>
-            <li><a href="#"></a><i class="fa-brands fa-apple"></i></li>
-          </ul>
-        </div>
-        <div class="footer-main">
-          <div class="footer-col-1">
-            <div class="footer-title">GET IN TOUCH</div>
-            <div class="footer-main-line"></div>
-            <div class="footer-main1-box1">
-              <div class="footer-main1-icon">
-                <i class="bi fa-brands bi-geo-alt-fill"></i>
-              </div>
-              <div class="footer-main1-infor1">
-                101 West Street, New York, NY 12345
-              </div>
-            </div>
-            <div class="footer-main1-box2">
-              <div class="footer-main1-icon">
-                <i class="bi fa-brands bi-telephone-fill"></i>
-              </div>
-              <div class="footer-main1-infor2">
-                +1-888-555-5555 <br />
-                +1-888-555-1234
-              </div>
-            </div>
-            <div class="footer-main1-box3">
-              <div class="footer-main1-icon">
-                <i class="bi fa-brands bi-envelope"></i>
-              </div>
-              <div class="footer-main1-infor3">
-                support@dan-fisher.com<br />
-                info@dan-fisher.com
-              </div>
-            </div>
-          </div>
-          <div class="footer-col-2">
-            <div class="footer-title">RECENT POSTS</div>
-            <div class="footer-main2-line"></div>
-            <div class="footer-main2-box">
-              <div class="footer-main2-ques">
-                HOW MANY GALAXIES ARE IN THE KNOWN UNIVERSE?
-              </div>
-              <div class="footer-main2-ans">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reiciendis dolores officiis...
-              </div>
-              <div class="footer-main2-date">August 6, 2014</div>
-            </div>
-            <div class="footer-main2-box">
-              <div class="footer-main2-ques">
-                HOW MANY GALAXIES ARE IN THE KNOWN UNIVERSE?
-              </div>
-              <div class="footer-main2-ans">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reiciendis dolores officiis...
-              </div>
-              <div class="footer-main2-date">August 6, 2014</div>
-            </div>
-          </div>
-          <div class="footer-col-3">
-            <div class="footer-title">LATEST TWEETS</div>
-            <div class="footer-main3-line"></div>
-            <div class="footer-main3-box">
-              <div class="footer-main3-heading">
-                <div class="footer-main3-icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    fill="currentColor"
-                    class="bi bi-twitter"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
-                    />
-                  </svg>
-                </div>
-                <div class="footer-main3-title1">Dan Fisher</div>
-                <div class="footer-main3-title2">@danfisher_dev</div>
-              </div>
-              <div class="footer-main3-text">
-                <i class="bi bi-lightning-charge-fill"></i>
-                We just released a new version of the Valkivid Tailwind CSS HTML
-                template. It includes a new version for streamer…
-              </div>
-              <div class="footer-main3-footer"></div>
-            </div>
-            <div class="footer-main3-box">
-              <div class="footer-main3-heading">
-                <div class="footer-main3-icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    fill="currentColor"
-                    class="bi bi-twitter"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
-                    />
-                  </svg>
-                </div>
-                <div class="footer-main3-title1">Dan Fisher</div>
-                <div class="footer-main3-title2">@danfisher_dev</div>
-              </div>
-              <div class="footer-main3-text">
-                <i class="bi bi-lightning-charge-fill"></i>
-                We just released a new version of the Valkivid Tailwind CSS HTML
-                template. It includes a new version for streamer…
-              </div>
-              <div class="footer-main3-footer"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <div class="wrapper-container">
-      <div class="container-all">
+      <div class="container-1">
         <div class="list"></div>
         <div class="menu">
-          <h1>Menu</h1>
+         <div class=""><h1>Menu</h1></div> 
           <div>
-            <h2>Drinks</h2>
+            <div class="parents"><h3>Drinks</h3></div> 
             <hr>
             <div class="list-drinks">
               <div class="drink-item">
