--- a/auth.html
+++ b/auth.html
@@ -15,7 +15,7 @@
 
     <div class="container" id="container">
         <div class="form-container sign-up-container">
-            <form action="#">
+            <form action="#" id="register-form">
                 <h1>Create Account</h1>
                 <div class="social-container">
                     <a href="#" class="social">
@@ -36,7 +36,7 @@
             </form>
         </div>
         <div class="form-container sign-in-container">
-            <form action="#">
+            <form action="#" id="login-form">
                 <h1>Sign In</h1>
                 <div class="social-container">
                     <a href="#" class="social">
@@ -50,8 +50,8 @@
                     </a>
                 </div>
                 <span>or use your account</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+                <input type="email" placeholder="Email" id="email">
+                <input type="password" placeholder="Password" id="password">
                 <button>Sign In</button>
             </form>
         </div>
@@ -70,7 +70,8 @@
             </div>
         </div>
     </div>
-    <script src="signin.js"></script>
+    <script src="./js/auth.js"></script>
+    <script src="./js/switch.js"></script>
     <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
 
