--- a/menu.html
+++ b/menu.html
@@ -7,44 +7,99 @@
     <link rel="stylesheet" href="styles/menu.css" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
 
   <body>
-    <div class="navigation">
-      <div class="symbol"></div>
-      <div class="navi-1">
-        <nav>
-          <ul>
-            <li><a class="a" href="./menu.html">Menu</a></li>
-            <li><a class="a" href="./rewards.html">Rewards</a></li>
-            <li><a class="a" href="./giftcard.html">Gift Cards</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="navi-2"></div>
-    </div>
-    <div class="wrapper-container">
+    <div class="container-all">
       <div class="container-1">
-        <div class="list"></div>
-        <div class="menu">
-         <div class=""><h1>Menu</h1></div> 
-          <div>
-            <div class="parents"><h3>Drinks</h3></div> 
-            <hr>
-            <div class="list-drinks">
-              <div class="drink-item">
-                <img src="https://globalassets.starbucks.com/digitalassets/products/bev/Oleato_GoldenFoam_ColdBrew.jpg?impolicy=1by1_tight_288" alt="">
-                <span>Oleato™</span>
+        <div class="navigation">
+          <div class="symbol"></div>
+          <div class="navi-1">
+            <nav>
+              <ul>
+                <li><a class="ar" href="./menu.html">Menu</a></li>
+                <li><a class="ar" href="./rewards.html">Rewards</a></li>
+                <li><a class="ar" href="./giftcard.html">Gift Cards</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="navi-2">
+            <div class="button">
+              <button class="signin" id="signin">Sign in</button>
+              <button class="joinnow">Join now</button>
+            </div>
+            <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
+          </div>
+        </div>
+        <div class="page-1">
+          <div class="list">
+            <div class="top-list">
+              <div class="top-1">
+                <div class="title-top">
+                  <b> Drinks </b>
+                </div>
+                <div class="text">
+                  <p>Frappuccino® Blended Beverages</p>
+                  <p>Iced Coffee & Cold Brew</p>
+                  <p>Starbucks Refresha® Drink</p>
+                  <p>Iced Tea</p>
+                </div>
+                <div class="title">
+                  <b> Food </b>
+                </div>
+                <div class="text">
+                  <p>Breakfast</p>
+                  <p>Bakery Treats</p>
+                </div>
               </div>
-              
+            </div>
+            <div class="top-list">
+              <div class="title">
+                <b>At Home Coffee</b>
+              </div>
+              <div class="text">
+                <p>VIA® Instant</p>
+              </div>
+            </div>
+            <div class="top-list">
+              <div class="title">
+                <b>Merchandise</b>
+              </div>
+              <div class="text">
+                <p>Cold Cups</p>
+              </div>
             </div>
           </div>
-
+          <div class="parents">
+            <div id="product-list">
+              <template id="product-template">
+                <div class="circle">
+                  <img
+                    id="product-image"
+                    class="card-img-top"
+                    src=""
+                    alt=""
+                  />
+                  <div class="card-body">
+                    <h5 id="product-title" class="card-title">Iphone 15</h5>
+                  </div>
+                </div>
+              </template>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <script src="./menu.js"></script>
+
+    <script src="js/menu.js"></script>
   </body>
 </html>
