--- a/detail.html
+++ b/detail.html
@@ -70,15 +70,25 @@
           </div>
         </div>
         <div class="parents">
-          <div id="product-list">
-            <template id="product-template">
-              <div class="circle">
-                <img id="product-image" class="card-img-top" src="" alt="" />
-                <div class="card-body">
-                  <h5 id="product-title" class="card-title">Iphone 15</h5>
+          <div class="product-list">
+            <!-- <template id="product-template"> -->
+            <h4 id="product-type">Drinks</h4>
+            <hr />
+            <div class="wrapper" id="product-list">
+              <template id="product-template">
+                <div class="circle">
+                  <img
+                    id="product-image"
+                    class="card-img-top"
+                    src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                    alt=""
+                  />
+                  <div id="product-title" class="circle-title">Coffee</div>
                 </div>
-              </div>
-            </template>
+              </template>
+            </div>
+
+            <!-- </template> -->
           </div>
         </div>
       </div>
