--- a/menu.html
+++ b/menu.html
@@ -6,11 +6,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/menu.css" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -80,20 +88,83 @@
             </div>
           </div>
           <div class="parents">
-            <div id="product-list">
-              <template id="product-template">
-                <div class="circle">
-                  <img
-                    id="product-image"
-                    class="card-img-top"
-                    src=""
-                    alt=""
-                  />
-                  <div class="card-body">
-                    <h5 id="product-title" class="card-title">Iphone 15</h5>
+            <div class="product-list">
+              <!-- <template id="product-template"> -->
+              <h4 id="product-type">Drinks</h4>
+              <hr />
+              <div class="wrapper" id="product-list">
+                <template id="product-template">
+                  <div class="circle">
+                    <img
+                      id="product-image"
+                      class="card-img-top"
+                      src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                      alt=""
+                    />
+                    <div id="product-title" class="circle-title">Coffee</div>
                   </div>
-                </div>
-              </template>
+                </template>
+              </div>
+              
+
+              <!-- </template> -->
+            </div>
+            <div class="product-list">
+              <!-- <template id="product-template"> -->
+              <h4 id="product-type">Food</h4>
+              <hr />
+              <div class="wrapper" id="product-list">
+                <template id="product-template">
+                  <div class="circle">
+                    <img
+                      id="product-image"
+                      class="card-img-top"
+                      src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                      alt=""
+                    />
+                    <div id="product-title" class="circle-title">Coffee</div>
+                  </div>
+                </template>
+              </div>
+              
+
+              <!-- </template> -->
+            </div>
+            <div class="product-list">
+              <!-- <template id="product-template"> -->
+              <h4 id="product-type"> At Home Coffee</h4>
+              <hr />
+              <div class="wrapper" id="product-list">
+                <template id="product-template">
+                  <div class="circle">
+                    <img
+                      id="product-image"
+                      class="card-img-top"
+                      src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                      alt=""
+                    />
+                    <div id="product-title" class="circle-title">Coffee</div>
+                  </div>
+                </template>
+              </div>
+            </div>
+            <div class="product-list">
+              <!-- <template id="product-template"> -->
+              <h4 id="product-type">Merchandise</h4>
+              <hr />
+              <div class="wrapper" id="product-list">
+                <template id="product-template">
+                  <div class="circle">
+                    <img
+                      id="product-image"
+                      class="card-img-top"
+                      src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                      alt=""
+                    />
+                    <div id="product-title" class="circle-title">Coffee</div>
+                  </div>
+                </template>
+              </div>
             </div>
           </div>
         </div>
