--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
           <div class="navi-2">
             <div class="button">
               <button class="signin" id="signin">Sign in</button>
-              <button class="joinnow">Join now</button>
+              <button class="joinnow"> Join now</button>
             </div>
             <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
           </div>
@@ -105,63 +105,55 @@
                   </div>
                 </template>
               </div>
-              
-
-              <!-- </template> -->
             </div>
-            <div class="product-list">
+            <div class="product-list1">
               <!-- <template id="product-template"> -->
               <h4 id="product-type">Food</h4>
               <hr />
-              <div class="wrapper" id="product-list">
-                <template id="product-template">
+              <div class="wrapper" id="product-lis">
+                <template id="product-templat">
                   <div class="circle">
                     <img
-                      id="product-image"
+                      id="product-imag"
                       class="card-img-top"
                       src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
                       alt=""
                     />
-                    <div id="product-title" class="circle-title">Coffee</div>
+                    <div id="product-titl" class="circle-title">Coffee</div>
                   </div>
                 </template>
               </div>
-              
-
-              <!-- </template> -->
             </div>
-            <div class="product-list">
-              <!-- <template id="product-template"> -->
+            <div class="product-list1">
               <h4 id="product-type"> At Home Coffee</h4>
               <hr />
-              <div class="wrapper" id="product-list">
-                <template id="product-template">
+              <div class="wrapper" id="product-list1">
+                <template id="product-template1">
                   <div class="circle">
                     <img
-                      id="product-image"
+                      id="product-image1"
                       class="card-img-top"
                       src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
                       alt=""
                     />
-                    <div id="product-title" class="circle-title">Coffee</div>
+                    <div id="product-title1" class="circle-title">Coffee</div>
                   </div>
                 </template>
               </div>
             </div>
-            <div class="product-list">
-              <!-- <template id="product-template"> -->
-              <h4 id="product-type">Merchandise</h4>
+            <div class="product-list1">
+              <h4 id="product-type"> Merchandise</h4>
               <hr />
-              <div class="wrapper" id="product-list">
-                <template id="product-template">
+              <div class="wrapper" id="product-list2">
+                <template id="product-template2">
                   <div class="circle">
                     <img
-                      id="product-image"
+                      id="product-image2"
                       class="card-img-top"
                       src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
                       alt=""
                     />
-                    <div id="product-title" class="circle-title">Coffee</div>
+                    <div id="product-title2" class="circle-title">Coffee</div>
                   </div>
                 </template>
               </div>
