--- a/rewards.html
+++ b/rewards.html
@@ -31,7 +31,7 @@
           <div class="page-1">
             <div class="fixed-image">
                 <div class="button-image">
-                    <button> Join now </button>
+                    <button class="buttonn"> Join now </button>
                 </div>
             </div>
           </div>
