--- a/delivery.html
+++ b/delivery.html
@@ -10,7 +10,7 @@
     <div class="container-all">
         <div class="container-1">
           <div class="navigation">
-            <div class="symbol"></div>
+            <div class="symbol" id="symbol"></div>
             <div class="navi-1">
               <nav>
                 <ul>
