--- a/giftcard.html
+++ b/giftcard.html
@@ -20,7 +20,7 @@
 
   <body>
     <div class="navigation">
-        <div class="symbol"></div>
+        <div class="symbol" id="symbol"></div>
         <div class="navi-1">
           <nav>
             <ul>
