--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
     <div class="container-all">
       <div class="container-1">
         <div class="navigation">
-          <div class="symbol"></div>
+          <div class="symbol" id="symbol"></div>
           <div class="navi-1">
             <nav>
               <ul>
@@ -162,6 +162,7 @@
         </div>
       </div>
     </div>
+
 
     <script src="js/menu.js"></script>
   </body>
