--- a/delivery.html
+++ b/delivery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/reward.css">
+    <link rel="stylesheet" href="./styles/delivery.css">
 </head>
 <body>
     <div class="container-all">
@@ -30,13 +30,13 @@
           </div>
           <div class="page-1">
             <div class="fixed-image">
-                <div class="button-image">
-                    <button class="buttonn"> Join now </button>
-                </div>
+            </div>
+            <div class="right">
+              <div class="right-fixed-image"></div>
             </div>
           </div>
             
 
-<script src="./js/reward.js"></script>
+<script src="./js/delivery.js"></script>
 </body>
 </html>
