--- a/delivery.html
+++ b/delivery.html
@@ -1,42 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles/delivery.css">
-</head>
-<body>
-    <div class="container-all">
-        <div class="container-1">
-          <div class="navigation">
-            <div class="symbol" id="symbol"></div>
-            <div class="navi-1">
-              <nav>
-                <ul>
-                  <li><a class="ar" href="./menu.html">Menu</a></li>
-                  <li><a class="ar" href="./rewards.html">Rewards</a></li>
-                  <li><a class="ar" href="./giftcard.html">Gift Cards</a></li>
-                </ul>
-              </nav>
-            </div>
-            <div class="navi-2">
-              <div class="button">
-              <button class="signin" id="signin">Sign in</button> 
-               <button class="joinnow"> Join now</button>
-              </div>
-              <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
-            </div>
-          </div>
-          <div class="page-1">
-            <div class="fixed-image">
-            </div>
-            <div class="right">
-              <div class="right-fixed-image"></div>
-            </div>
-          </div>
-            
 
-<script src="./js/delivery.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./styles/delivery.css">
+</head>
+
+<body>
+  <div class="container-all">
+    <div class="container-1">
+      <div class="navigation">
+        <div class="symbol" id="symbol"></div>
+        <div class="navi-1">
+          <nav>
+            <ul>
+              <li><a class="ar" href="./menu.html">Menu</a></li>
+              <li><a class="ar" href="./delivery.html">Delivery</a></li>
+              <li><a class="ar" href="./giftcard.html">Gift Cards</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="navi-2">
+          <div class="button">
+            <button class="signin" id="signin">Sign in</button>
+            <button class="joinnow"> Join now</button>
+          </div>
+          <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
+        </div>
+      </div>
+      <div class="page-1">
+        <div class="fixed-image">
+        </div>
+        <div class="right">
+          <div class="right-fixed-image">
+            <img class="style-img"
+              src="https://www.starbucks.co.uk/sites/starbucks-uk/files/styles/c02_horizontal_card_1335x534/public/2022-03/11312197-STARBUCKS-SBUX-DELIVERS-STARBUCKS_WEBSITE-BAG_AND_GRANDE-1133x476px-GREEN.jpg.webp?itok=qQ4Zl330">
+          </div>
+          <div class="step-deliver">
+            <Div class="step1">
+              <div class="step1-img">
+                <img class="delivery-img"
+                  src="https://www.starbucks.com/weblx/images/rewards/benefits/1-fun-freebies.jpg">
+              </div>
+              <div class="step1-title">
+                Order on the app
+              </div>
+            </Div>
+            <Div class="step1">
+              <div class="step1-img">
+                <img class="delivery-img"
+                  src="https://www.starbucks.com/weblx/images/rewards/benefits/2-order-and-pay-ahead.jpg">
+              </div>
+              <div class="step1-title">
+                Earn stars
+              </div>
+            </Div>
+            <Div class="step1">
+              <div class="step1-img">
+                <img class="delivery-img"
+                  src="https://www.starbucks.com/weblx/images/rewards/benefits/3-get-to-free-faster.jpg">
+              </div>
+              <div class="step1-title">
+                Enjoy !!!
+              </div>
+            </Div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="footer-main">
+          <div class="container-col">
+            <div class="col">
+              <div class="col-title">
+                COFFEE
+              </div>
+              <div class="col-text">
+                <p class="p">Whole Bean Coffee</p>
+                <p class="p">Ethical Sourcing</p>
+                <p class="p">Coffee Tasting</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="col-title">
+                MENU
+              </div>
+              <div class="col-text">
+                <p class="p">Beverages</p>
+                <p class="p">Food</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="col-title">
+                MERCHANDISE
+              </div>
+              <div class="col-text">
+                <p class="p">Online Store</p>
+                <p class="p">Terms & Conditions</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="col-title">
+                SHARE
+              </div>
+              <div class="col-text1">
+                <i class="fa-brands fa-facebook"></i></li>
+                <i class="fa-brands fa-twitter"></i></li>
+                <i class="fa-brands fa-instagram"></i></li>
+              </div>
+            </div>
+          </div>
+          <div class="footer-starbuck">
+            <img src="https://www.starbucks.com.au/assets/uploads/2023/06/logo-starbucks-wordmark.svg">
+          </div>
+        </div>
+        <div class="footer-line">
+          <div class="line-right">
+            Copyright © 2023. Starbucks Coffee Australia. All Rights Reserved.
+          </div>
+          <div class="line-left">
+            <div class="left-1">
+              Privacy Policy
+            </div>
+            <div class="left-2">
+              Terms of Use
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="./js/delivery.js"></script>
 </body>
+
 </html>
