--- a/giftcard.html
+++ b/giftcard.html
@@ -25,7 +25,7 @@
           <nav>
             <ul>
               <li><a class="ar" href="./menu.html">Menu</a></li>
-              <li><a class="ar" href="./rewards.html">Rewards</a></li>
+              <li><a class="ar" href="./delivery.html">Delivery</a></li>
               <li><a class="ar" href="./giftcard.html">Gift Cards</a></li>
             </ul>
           </nav>
