--- a/giftcard.html
+++ b/giftcard.html
@@ -13,7 +13,6 @@
     rel="stylesheet">
   <link href="https://db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,50 +21,73 @@
 <body>
   <div class="navigation1">
     <div class="symbol" id="symbol"></div>
-    <div class="navi-1-1">
+    <div class="navi-1">
       <nav>
         <ul>
-          <li><a class="arr" href="./menu.html">Menu</a></li>
-          <li><a class="arr" href="./delivery.html">Delivery</a></li>
-          <li><a class="arr" href="./giftcard.html">Gift Cards</a></li>
+          <li><a class="ar" href="./menu.html">Menu</a></li>
+          <li><a class="ar" href="./delivery.html">Delivery</a></li>
+          <li><a class="ar" href="./giftcard.html">Gift Cards</a></li>
         </ul>
       </nav>
     </div>
-    <div class="navi-2-2">
+    <div class="navi-2">
       <div class="buttonn">
-        <button class="signinn"><a href="./signin.html"></a> Sign in</button>
+        <button class="signin"><a href="./signin.html"></a> Sign in</button>
         <button class="joinnoww"> Join now</button>
       </div>
       <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
     </div>
   </div>
   <div class="page-1">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card">
-          <img src="https://globalassets.starbucks.com/digitalassets/cards/fy24/ConfettiCelebrationFY24.jpg" class="card-img-top" alt="...">
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="https://globalassets.starbucks.com/digitalassets/cards/fy24/ConfettiCelebrationFY24.jpg" class="card-img-top" alt="...">
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="https://globalassets.starbucks.com/digitalassets/cards/fy24/ConfettiCelebrationFY24.jpg" class="card-img-top" alt="...">
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="https://globalassets.starbucks.com/digitalassets/cards/fy24/ConfettiCelebrationFY24.jpg" class="card-img-top" alt="...">
-            </div>
-          </div>
-        </div>
+    
+
+<ul class="cards">
+  <li class="cards__item">
+    <div class="card">
+      <div class="card__image card__image--fence"></div>
+      <div class="card__content">
+        <div class="card__title">Flex</div>
+        <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink and flex-basis) are optional. Default is 0 1 auto. </p>
+        <button class="btn btn--block card__btn">Button</button>
+      </div>
+    </div>
+  </li>
+  <li class="cards__item">
+    <div class="card">
+      <div class="card__image card__image--river"></div>
+      <div class="card__content">
+        <div class="card__title">Flex Grow</div>
+        <p class="card__text">This defines the ability for a flex item to grow if necessary. It accepts a unitless value that serves as a proportion. It dictates what amount of the available space inside the flex container the item should take up.</p>
+        <button class="btn btn--block card__btn">Button</button>
+      </div>
+    </div>
+  </li>
+  <li class="cards__item">
+    <div class="card">
+      <div class="card__image card__image--record"></div>
+      <div class="card__content">
+        <div class="card__title">Flex Shrink</div>
+        <p class="card__text">This defines the ability for a flex item to shrink if necessary. Negative numbers are invalid.</p>
+        <button class="btn btn--block card__btn">Button</button>
+      </div>
+    </div>
+  </li>
+  <li class="cards__item">
+    <div class="card">
+      <div class="card__image card__image--flowers"></div>
+      <div class="card__content">
+        <div class="card__title">Flex Basis</div>
+        <p class="card__text">This defines the default size of an element before the remaining space is distributed. It can be a length (e.g. 20%, 5rem, etc.) or a keyword. The auto keyword means "look at my width or height property."</p>
+        <button class="btn btn--block card__btn">Button</button>
+      </div>
+    </div>
+  </li>
+</ul>
       </div>
 
-
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
       <script src="./js/giftcard.js"></script>
+      <script src="https://swiperjs.com/demos#navigation"></script>
 </body>
 
 </html>
